JPS-4907 add overflow-wrap to dialog to avoid long word markup failures
Former-commit-id: 5603334a9b39ffdcf968f69fb1c22f18c04fba40

--- a/components/dialog/dialog.css
+++ b/components/dialog/dialog.css
@@ -21,6 +21,7 @@
 .content {
   border: 1px solid #B4B4B4;
   border-radius: border-radius;
+  overflow-wrap: break-word;
 
   background: #FFF;
   box-shadow: 0 0 calc(unit * 4) unit rgba(0, 0, 0, .2);
